--- a/css/styles.css
+++ b/css/styles.css
@@ -90,60 +90,42 @@ h4 {
     z-index: -1; } }
 
 .loader-container {
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
-  width: 400px;
-  height: 400px;
+  flex-direction: column;
+  width: 200px;
+  height: 200px;
   align-items: center;
-  justify-content: space-between; }
+  justify-content: center;
+  z-index: 10; }
   .loader-container img {
-    height: 20%;
-    width: 20%; }
-  @media only screen and (max-width: 37.5em) {
-    .loader-container {
-      width: 360px;
-      height: 360px; } }
+    height: 60%;
+    width: 60%; }
 
-.apple {
-  animation: vanish 2s ease-in forwards; }
+.ghost {
+  animation: bounce 1s ease-in-out infinite; }
 
-.pears {
-  animation: vanish 2s ease-in forwards;
-  animation-delay: 1s; }
-
-.plums {
-  animation: vanish 2s ease-in forwards;
-  animation-delay: 2s; }
-
-@keyframes vanish {
+@keyframes bounce {
   0% {
-    opacity: 1; }
+    top: 15%; }
   50% {
-    transform: translate(0, 20px); }
+    top: 50%;
+    width: 230px;
+    height: 190px; }
   100% {
-    opacity: 0; } }
+    top: 15%;
+    width: 200px;
+    height: 200px; } }
 
-.shadowFrame {
-  width: 130px;
-  margin: auto;
-  margin-top: 25px; }
-
-.shadow {
-  animation: shrink 3s ease-out infinite;
-  transform-origin: center center; }
-
-.shadow ellipse {
-  transform-origin: center center; }
-
-@keyframes shrink {
-  0% {
-    width: 90%;
-    margin: 0 5%; }
-  50% {
-    width: 60%;
-    margin: 0 18%; }
-  100% {
-    width: 90%;
-    margin: 0 5%; } }
+.basediv {
+  background-color: #7ebc59;
+  width: 1200px;
+  height: 40%;
+  position: fixed;
+  bottom: 0; }
 
 .sidebar {
   grid-row: 1/5;
@@ -512,23 +494,21 @@ h4 {
   .introduction__img {
     position: relative;
     width: 200px;
-    height: 280px;
+    height: 300px;
+    padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     align-self: center;
     margin-bottom: 2rem;
     border-radius: 3px;
+    background: #7ebc59;
     cursor: pointer;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); }
-    @media only screen and (max-width: 62.5em) {
-      .introduction__img {
-        width: 200px;
-        height: 280px;
-        margin-right: 2rem; } }
     .introduction__img img {
+      transform: rotate(-90deg) translateY(-15%);
       height: 100%;
-      width: 100%; }
+      width: 150%; }
   .introduction__text {
     width: 60%; }
     @media only screen and (max-width: 37.5em) {
@@ -557,7 +537,7 @@ h4 {
     .introduction__choices p {
       font-weight: bolder; }
   .introduction__set {
-    background-color: #da291c;
+    background-color: #368cbf;
     height: 30px;
     width: 50px;
     border-radius: 8px;
@@ -603,55 +583,106 @@ h4 {
     .bugheading {
       left: 25%; } }
 
-.orange {
+.car {
   position: absolute;
-  left: 40px;
-  top: 55px;
-  height: 50%;
-  width: 70%; }
+  top: 120px;
+  left: 128px;
+  z-index: 20;
+  height: 18%;
+  width: 28%; }
 
-.turnOrange {
-  animation: rotater 4s ease-in-out infinite; }
+.runner {
+  animation: racerunner 2s infinite; }
 
-@keyframes rotater {
+@keyframes racerunner {
   0% {
-    transform: rotate(0deg); }
+    top: 120px;
+    left: 128px; }
+  5% {
+    top: 80px;
+    left: 128px; }
+  15% {
+    top: 60px;
+    left: 128px;
+    transform: rotate(-30deg); }
+  20% {
+    top: 40px;
+    left: 110px;
+    transform: rotate(-80deg); }
+  25% {
+    top: 30px;
+    left: 80px;
+    transform: rotate(-90deg); }
+  30% {
+    top: 30px;
+    left: 60px;
+    transform: rotate(-110deg); }
+  35% {
+    top: 40px;
+    left: 40px;
+    transform: rotate(-140deg); }
+  40% {
+    top: 60px;
+    left: 30px;
+    transform: rotate(-160deg); }
+  45% {
+    top: 80px;
+    left: 30px;
+    transform: rotate(-180deg); }
+  55% {
+    top: 120px;
+    left: 30px;
+    transform: rotate(-180deg); }
+  60% {
+    top: 180px;
+    left: 30px;
+    transform: rotate(-180deg); }
+  65% {
+    top: 190px;
+    left: 40px;
+    transform: rotate(-200deg); }
+  70% {
+    top: 210px;
+    left: 80px;
+    transform: rotate(-240deg); }
+  75% {
+    top: 200px;
+    left: 110px;
+    transform: rotate(-280deg); }
+  80% {
+    top: 180px;
+    left: 120px;
+    transform: rotate(-300deg); }
+  84.9% {
+    top: 160px;
+    left: 125px;
+    transform: rotate(-340deg);
+    opacity: 1; }
+  85% {
+    top: 160px;
+    left: 125px;
+    transform: rotate(-340deg);
+    opacity: 0; }
+  85.1% {
+    top: 160px;
+    left: 125px;
+    transform: rotate(0);
+    opacity: 1; }
+  90% {
+    top: 140px;
+    left: 125px;
+    transform: rotate(0);
+    opacity: 1; }
+  95% {
+    top: 130px;
+    left: 128px;
+    transform: rotate(0);
+    opacity: 1; }
   100% {
-    transform: rotate(7200deg); } }
-
-.bugbutton {
-  position: absolute;
-  left: 35%;
-  top: 60%;
-  height: 30px;
-  width: 120px;
-  border-radius: 8px;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 2rem;
-  color: #000;
-  background-color: #fff;
-  box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.4);
-  cursor: pointer; }
-
-.bugvisible {
-  display: block; }
-
-.bugbutton:hover {
-  transform: translateY(2px);
-  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1); }
-
-.links {
-  margin-top: 3rem; }
-
-.rightmove {
-  animation: goright 2s; }
-
-@keyframes goright {
-  0% {
-    transform: translateX(0); }
-  100% {
-    transform: translateX(4rem); } }
+    top: 120px;
+    left: 128px;
+    transform: rotate(0);
+    opacity: 1; } }
 
 .wrapper {
   width: 1200px;
@@ -682,7 +713,7 @@ h4 {
   grid-row: 2/3;
   grid-template-columns: 50px repeat(4, 1fr);
   grid-template-rows: 50px repeat(4, 1fr);
-  background-color: #da291c;
+  background-color: #7ebc59;
   color: #fff;
   width: 800px;
   height: 570px;
@@ -765,7 +796,7 @@ h4 {
 .card {
   width: 19%;
   height: 16%;
-  background-color: #da291c;
+  background-color: #7ebc59;
   position: relative;
   border: none;
   margin: 2% 3%; }
@@ -811,7 +842,7 @@ imgBg.smaller {
   font-size: 2rem;
   text-align: center;
   position: absolute;
-  background: #ffc72c;
+  background: #368cbf;
   transform: rotateX(0deg);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
