--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -37,84 +37,48 @@
   }
 }
 .loader-container {
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
-  width: 400px;
-  height: 400px;
+  flex-direction: column;
+  width: 200px;
+  height: 200px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  z-index: 10;
   & img {
     
-    height: 20%;
-    width: 20%;
-  }
-
-  @media only screen and (max-width:$bp-small){
-    width: 360px;
-    height: 360px;
-  }
-}
-
-.apple {
-  animation: vanish 2s ease-in forwards;
-}
-.pears {
- 
-  animation: vanish 2s ease-in forwards;
-  animation-delay: 1s;
-}
-.plums {
-
-  animation: vanish 2s ease-in forwards;
-  animation-delay: 2s;
-}
-
-
-// .ghost {
-//   animation: float 3s ease-out infinite;
-// }
-// @keyframes float {
-//   50% {
-//     transform: translate(0, 20px);
-//   }
-// }
-
-@keyframes vanish{
-  0% {
-    opacity: 1;
-  }
-
-  50% {
-    transform: translate(0, 20px);
-  }
-  100% {
-    opacity: 0;
-  }
-
-}
-.shadowFrame {
-  width: 130px;
-  margin: auto;
-  margin-top: 25px;
-
-}
-.shadow {
-  animation: shrink 3s ease-out infinite;
-  transform-origin: center center;
-}
-.shadow ellipse {
-  transform-origin: center center;
-}
-@keyframes shrink {
-  0% {
-    width: 90%;
-    margin: 0 5%;
-  }
-  50% {
+    height: 60%;
     width: 60%;
-    margin: 0 18%;
   }
+}
+.ghost {
+  animation: bounce 1s ease-in-out infinite;
+}
+@keyframes bounce {
+  0% {
+    top: 15%;
+  }
+  50% {
+    top: 50%;
+    width: 230px;
+    height: 190px;
+  }
+
   100% {
-    width: 90%;
-    margin: 0 5%;
+    top: 15%;
+    width: 200px;
+    height: 200px;
   }
+
+}
+
+.basediv {
+  background-color: $color-green;
+  width: 1200px;
+  height: 40%;
+  position: fixed;
+  bottom: 0;
 }
